<resources>
    <string name="app_name">Colocviu1_13</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="title_activity_colocviu1_13_secondary">Colocviu1_13SecondaryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
</resources>
